force-app/main/default/objects/Contact/fields/BairroCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>BairroCorrespondencia__c</fullName>
    <label>Bairro de Correspondência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>