force-app/main/default/objects/Contact/fields/ComplementoCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>ComplementoCorrespondencia__c</fullName>
    <label>Complemento de Correspondência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>