force-app/main/default/objects/Contact/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Usuário gerente do contato. Usado como 2º aprovador (após o supervisor) nos casos do Help Desk.</description>
    <label>Gerente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contatos_Gerenciados</relationshipName>
    <type>Lookup</type>
</CustomField>