force-app/main/default/objects/Contact/fields/NumeroRuaCorrespondencia__c.field-meta.xml
<CustomField>
    <fullName>NumeroRuaCorrespondencia__c</fullName>
    <label>Número da Rua de Correspondência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>