force-app/main/default/objects/Contact/fields/rsplus__Appointment_Acceptance_status__c.field-meta.xml
<CustomField>
    <fullName>rsplus__Appointment_Acceptance_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Acceptance status</label>
    <type>Checkbox</type>
</CustomField>