force-app/main/default/objects/Contact/fields/rsplus__Book_Appointment__c.field-meta.xml
<CustomField>
    <fullName>rsplus__Book_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Book Appointment</label>
    <type>Checkbox</type>
</CustomField>