force-app/main/default/objects/Contact/fields/rsplus__Message_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>rsplus__Message_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Message Opt Out</label>
    <type>Checkbox</type>
</CustomField>