force-app/main/default/objects/Contact/fields/rsplus__My_phone__c.field-meta.xml
<CustomField>
    <fullName>rsplus__My_phone__c</fullName>
    <label>My phone</label>
    <type>Phone</type>
</CustomField>