force-app/main/default/objects/Contact/fields/rsplus__phone_number__c.field-meta.xml
<CustomField>
    <fullName>rsplus__phone_number__c</fullName>
    <label>phone number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>