force-app/main/default/objects/Contact/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Usuário supervisor do contato. Usado como 1º aprovador nos casos do Help Desk.</description>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contatos_Supervisionados</relationshipName>
    <type>Lookup</type>
</CustomField>