force-app/main/default/objects/Contact/fields/Telefone_Formatado__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Formatado__c</fullName>
    <formula>IF(
    
    LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) = 13,
    LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;), 4) &amp; MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;), 6, LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) - 5),
    
   IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) = 12,
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;),

   IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) = 11,
   LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(&quot;55&quot; + Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;), 4) &amp; MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(&quot;55&quot; + Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;), 6, LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(&quot;55&quot; + Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) - 5),
    IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) = 11,
    &quot;55&quot; + SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;),
    IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) = 10,
    &quot;55&quot; + SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;),
    IF(LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) &lt; 11, &quot;Número faltando informação: &quot; + Phone, Phone))
)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone Formatado</label>
    <type>Text</type>
</CustomField>