force-app/main/default/objects/Contact/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <label>Código de Verificação</label>
    <length>12</length>
    <type>Text</type>
</CustomField>