force-app/main/default/objects/Contact/fields/Verification_Code_Expires__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code_Expires__c</fullName>
    <label>Expiração do Código de Verificação</label>
    <type>DateTime</type>
</CustomField>