force-app/main/default/objects/Contact/listViews/Contatos_Parceiros.listView-meta.xml
<ListView>
    <fullName>Contatos_Parceiros</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>2/15/2023 12:00 AM</value>
    </filters>
    <label>Contatos Parceiros</label>
</ListView>