force-app/main/default/objects/Contact/listViews/rsplus__AllContacts.listView-meta.xml
<ListView>
    <fullName>rsplus__AllContacts</fullName>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>